<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bckgndCol"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="599dp"
        android:text="@string/welcomeProfile"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/bedtimePicker"
        android:layout_width="244dp"
        android:layout_height="73dp"
        android:layout_marginTop="368dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bedtime"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/age"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/age"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/editAge"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editAge"
        android:layout_width="89dp"
        android:layout_height="52dp"
        android:layout_marginEnd="240dp"
        android:autofillHints=""
        android:ems="10"
        android:importantForAccessibility="no"
        android:inputType="numberSigned"
        app:layout_constraintBaseline_toBaselineOf="@+id/age"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/skin_pigment"
        android:layout_width="169dp"
        android:layout_height="23dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="299dp"
        android:text="@string/skin_pigment_fitzpatrick"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/typeSelector"
        android:layout_width="154dp"
        android:layout_height="34dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="56dp"
        android:entries="@array/fitzpatrick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bedtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="392dp"
        android:text="@string/normal_bedtime"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/bedtimePicker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/waketimePicker"
        android:layout_width="243dp"
        android:layout_height="71dp"
        android:layout_marginTop="460dp"
        android:timePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wakeup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="485dp"
        android:text="@string/normal_wakeup_time"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/waketimePicker"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:onClick="onApplyClicked"
        android:text="@string/apply_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>